fixes folders organization

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="style/favicon.png"/>
-    <script type="module" src="source/app.js"></script>
+    <link rel="icon" type="image/png" href="source/style/favicon.png"/>
+    <script type="module" src="source/scripts/app.js"></script>
     <title>Quest</title>
 </head>
 <body>
