--- a/index.html
+++ b/index.html
@@ -12,15 +12,30 @@
 
     <template id="home-page">
         <div id="tags-view">
+            <button id="load-registration-page-btn">Sign Up</button>
+            <br><br>
             <button id="create-new-tag-btn">Create new tag</button>
 
             <p>[tags list (tbi)]</p>
         </div>
     </template>
 
+    <template id="registration-page">
+        <div id="registration-view">
+            <input id="name-input" placeholder="Your name"/>
+            <br>
+            <input id="email-input" placeholder="Your email"/>
+            <br>
+            <input id="password-input" type="password" placeholder="Your password"/>
+            <br><br>
+            <button id="registration-btn">Sign Up</button>
+            <button id="back-home-page-btn">Back to home page</button>
+        </div>
+    </template>
+
     <template id="create-tag-page">
         <div id="create-tag-view">
-            <input id="tag-name-txt" placeholder="Tag name"/>
+            <input id="tag-name-input" placeholder="Tag name"/>
             <br>
             <button id="create-tag-btn">Create tag</button>
             <button id="back-home-page-btn">Back to home page</button>
